--- a/static/output.css
+++ b/static/output.css
@@ -10,6 +10,7 @@
       "Courier New", monospace;
     --color-orange-100: oklch(95.4% 0.038 75.164);
     --color-green-700: oklch(52.7% 0.154 150.069);
+    --color-green-800: oklch(44.8% 0.119 151.328);
     --color-green-900: oklch(39.3% 0.095 152.535);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-400: oklch(70.7% 0.022 261.325);
@@ -214,6 +215,12 @@
   .static {
     position: static;
   }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
+  }
+  .right-4 {
+    right: calc(var(--spacing) * 4);
+  }
   .col-span-1 {
     grid-column: span 1 / span 1;
   }
@@ -310,8 +317,8 @@
   .table {
     display: table;
   }
-  .h-\[297mm\] {
-    height: 297mm;
+  .min-h-\[297mm\] {
+    min-height: 297mm;
   }
   .min-h-screen {
     min-height: 100vh;
@@ -322,8 +329,14 @@
   .max-w-3xl {
     max-width: var(--container-3xl);
   }
+  .max-w-full {
+    max-width: 100%;
+  }
   .grow {
     flex-grow: 1;
+  }
+  .cursor-pointer {
+    cursor: pointer;
   }
   .resize {
     resize: both;
@@ -370,9 +383,6 @@
   .gap-y-3 {
     row-gap: calc(var(--spacing) * 3);
   }
-  .overflow-hidden {
-    overflow: hidden;
-  }
   .rounded-md {
     border-radius: var(--radius-md);
   }
@@ -393,6 +403,9 @@
   .bg-gray-200 {
     background-color: var(--color-gray-200);
   }
+  .bg-green-700 {
+    background-color: var(--color-green-700);
+  }
   .bg-orange-100 {
     background-color: var(--color-orange-100);
   }
@@ -407,6 +420,12 @@
   }
   .px-2\.5 {
     padding-inline: calc(var(--spacing) * 2.5);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
   }
   .pb-px {
     padding-bottom: 1px;
@@ -494,6 +513,9 @@
   .text-green-900 {
     color: var(--color-green-900);
   }
+  .text-white {
+    color: var(--color-white);
+  }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -533,6 +555,13 @@
   .last\:pb-1\.5 {
     &:last-child {
       padding-bottom: calc(var(--spacing) * 1.5);
+    }
+  }
+  .hover\:bg-green-800 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-green-800);
+      }
     }
   }
   .hover\:text-gray-700 {
@@ -609,11 +638,6 @@
       display: none;
     }
   }
-  .print\:h-screen {
-    @media print {
-      height: 100vh;
-    }
-  }
   .print\:w-screen {
     @media print {
       width: 100vw;
@@ -650,9 +674,14 @@
       padding: calc(var(--spacing) * 0);
     }
   }
-  .print\:p-2 {
+  .print\:p-6 {
     @media print {
-      padding: calc(var(--spacing) * 2);
+      padding: calc(var(--spacing) * 6);
+    }
+  }
+  .print\:p-10 {
+    @media print {
+      padding: calc(var(--spacing) * 10);
     }
   }
   .print\:text-6xl {
@@ -674,7 +703,13 @@
   }
 }
 @page {
-  margin: 1cm;
+  size: A4;
+  margin: 0;
+}
+@media print {
+  .page {
+    zoom: 0.93;
+  }
 }
 @property --tw-border-style {
   syntax: "*";
